--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-particles-js": "^2.7.0",
     "react-scripts": "3.1.1"
   },
+  "homepage": "https://emmarafkin.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
